// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DateHeader snapshots with year and month props 1`] = `
<header
  className="DateHeader"
>
  <a
    className="Link previous"
    href="/2017/03"
    onClick={[Function]}
  />
  <h1
    className="DateHeaderTitle"
  >
    April 2017
  </h1>
  <a
    className="Link next"
    href="/2017/05"
    onClick={[Function]}
  />
</header>
`;

exports[`DateHeader snapshots with year prop 1`] = `
<header
  className="DateHeader"
>
  <a
    className="Link previous"
    href="/2016"
    onClick={[Function]}
  />
  <h1
    className="DateHeaderTitle"
  >
    2017
  </h1>
  <a
    className="Link next"
    href="/2018"
    onClick={[Function]}
  />
</header>
`;

exports[`DateHeader snapshots with year, month and day props 1`] = `
<header
  className="DateHeader"
>
  <a
    className="Link previous"
    href="/2017/04/20"
    onClick={[Function]}
  />
  <h1
    className="DateHeaderTitle"
  >
    Friday, 21st April 2017
  </h1>
  <a
    className="Link next"
    href="/2017/04/22"
    onClick={[Function]}
  />
</header>
`;
